--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="An interactive blah blah blah." />
-        <title>My Amazing App</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Kanit&family=Poppins&display=swap"
+            rel="stylesheet"
+        />
+        <title>Tic Tac Toe</title>
     </head>
     <body>
         <div id="root"></div>
